# SE-for-ML-Project

./: .gitattributes  .gitignore  README.md  main.ipynb  predict_test.py  pyproject.toml
C4-Documentation/: c4-code-ml-airflow.md  c4-code-ml-drift.md  c4-code-ml-drift.puml  c4-code-ml-inference.puml  c4-code-ml-predict-sequence.puml  c4-code-ml-training.md  c4-code-ml-training.puml  c4-code-ml.md  c4-component-ml.md  c4-component-ml.puml
airflow_pipeline/: Dockerfile  docker-compose.yml  predictions_init.sql  requirements.txt
airflow_pipeline/dags/: drift_detection_pipeline.py  train_pipeline.py
airflow_pipeline/data/: X_test_effnet.npy  X_test_resnet.npy  X_train_effnet.npy  X_train_resnet.npy  X_train_v1_effnet.npy  X_train_v1_resnet.npy  X_train_v2_effnet.npy  X_train_v2_resnet.npy  y_test.npy  y_train.npy  y_train_v2.npy
airflow_pipeline/mlruns/: mlflow.db
airflow_pipeline/mlruns/1/models/m-103757c0352542febcce4bcbd140286c/artifacts/: MLmodel
airflow_pipeline/mlruns/1/models/m-1b25cd047c0d48f3abda57a99fdf9f38/artifacts/: MLmodel  model.pkl
airflow_pipeline/mlruns/1/models/m-48196386a35c4b2bb2fd5cd409b779f1/artifacts/: MLmodel  conda.yaml  requirements.txt
airflow_pipeline/mlruns/1/models/m-5966ef74b43147ddbc972d52062b36eb/artifacts/: MLmodel
api/: auth.py  main.py  monitoring.py
api/bruno/: health-check.yml  opencollection.yml  predict-industry-restaraunt.yml  predict-industry-salon.yml  predict-industry.yml
api/static/: index.html  login.html  review.html
docs/c4-container/: c4-container.puml
docs/c4-context/: c4-context.puml
(+20 files in other folders)
